--- a/style/style.css
+++ b/style/style.css
@@ -197,23 +197,27 @@ nav {
 
 
 }
-.skill{
+
+.skill {
   padding: 24px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 16px;
   background-color: rgba(255, 255, 255, 1);
 }
-.skill-title{
+
+.skill-title {
   font-weight: 700;
   font-size: 20px;
   color: rgba(14, 14, 14, 0.8);
 }
+
 .skill-description {
   font-weight: normal;
   font-size: 16px;
   color: rgba(14, 14, 14, 0.7);
 }
-.title-two{
+
+.title-two {
   margin-right: 160px;
   margin-left: 160px;
   margin-top: 80px;
@@ -221,7 +225,8 @@ nav {
   font-size: 40px;
 
 }
-.descriptipn-two{
+
+.descriptipn-two {
   margin-right: 160px;
   margin-left: 160px;
   margin-top: 24px;
@@ -229,17 +234,19 @@ nav {
   font-size: 16px;
   color: rgba(14, 14, 14, 0.7);
 }
-.two-container{
+
+.two-container {
   margin-right: 160px;
   margin-left: 160px;
   margin-top: 24px;
   display: flex;
   gap: 24px;
 }
+
 /* .card-pad{ */
-  /* padding: 32px 32px; */
+/* padding: 32px 32px; */
 /* } */
-.card-btn-pad{
+.card-btn-pad {
   margin-top: 24px;
   border-radius: 8px;
   font-weight: 600;
@@ -248,42 +255,51 @@ nav {
   border: none;
   padding: 11px 20px 11px 20px;
 }
-.second-title{
+
+.second-title {
   font-weight: bold;
   font-size: 20px;
   color: #0E0E0E;
 }
-.second-description{
+
+.second-description {
   font-weight: normal;
   font-size: 16px;
   color: rgba(14, 14, 14, 0.7);
 }
-.card-one{
+
+.card-one {
   background-color: rgba(84, 144, 245, 0.2);
   padding: 32px 32px;
   border-radius: 16px;
 }
-.card-two{
- background-color:rgba(198, 228, 214, 1);
- padding: 32px 32px;
- border-radius: 16px;
+
+.card-two {
+  background-color: rgba(198, 228, 214, 1);
+  padding: 32px 32px;
+  border-radius: 16px;
 }
-.card-three{
- background-color:rgba(247, 235, 207, 1);
- padding: 32px 32px;
- border-radius: 16px;
+
+.card-three {
+  background-color: rgba(247, 235, 207, 1);
+  padding: 32px 32px;
+  border-radius: 16px;
 }
-.btn-one{
+
+.btn-one {
   background-color: rgba(84, 144, 245, 1);
 }
-.btn-two{
+
+.btn-two {
   background-color: rgba(9, 161, 92, 1);
 }
-.btn-three{
+
+.btn-three {
   background-color: rgba(255, 194, 57, 1);
 }
+
 /* yousuf section */
-.yousuf-sec{
+.yousuf-sec {
   background-image: url("/assets/quote-bg.png");
   background-repeat: no-repeat;
   margin-right: 160px;
@@ -292,107 +308,158 @@ nav {
   border-radius: 16px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.yousuf-speach{
+
+.yousuf-speach {
   font-weight: normal;
   font-size: 16px;
   color: rgba(14, 14, 14, 0.8);
   /* padding: ; */
 
 }
-.yousuf-cahir{
+
+.yousuf-cahir {
   padding: 48px 24px 48px 24px;
 }
-.yousuf-name{
+
+.yousuf-name {
   font-weight: 600;
   font-size: 20px;
 }
-.chair-name{
+
+.chair-name {
   font-weight: normal;
-  font-size: 16px ;
+  font-size: 16px;
   color: rgba(14, 14, 14, 0.8);
 }
+
 /* opinion-section */
-.opinion-title{
+.opinion-title {
   margin-right: 160px;
   margin-left: 160px;
   margin-bottom: 24px;
   font-weight: bold;
   font-size: 40px;
 }
-  
-.yousuf-TV{
+
+.yousuf-TV {
   margin-right: 160px;
   margin-left: 160px;
   border-radius: 16px;
-  box-shadow: 0px 4px 4px 0px  rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: rgba(255, 255, 255, 1);
 }
-.yousuf-tb{
+
+.yousuf-tb {
   padding: 32px 32px;
   border: .5px;
 }
-.opinion-heading{
+
+.opinion-heading {
   font-weight: 600;
   font-size: 20px;
   padding-top: 24px;
   padding-left: 24px;
   padding-bottom: 24px;
 }
-.chose-one{
+
+.chose-one {
   font-weight: 600;
   font-size: 16px;
   color: rgba(14, 14, 14, 1);
   padding-top: 36.5px;
-  padding-bottom: 36.5px ;
+  padding-bottom: 36.5px;
   padding-left: 24px;
-  padding-right: 347px ;
+  padding-right: 347px;
 }
-.for-color{
-  background-color:rgba(198, 228, 214, 1) ;
+
+.for-color {
+  background-color: rgba(198, 228, 214, 1);
   border-radius: 4px;
 }
-.map-jhok{
+
+.map-jhok {
   margin: 24px 24px;
   padding: 12px 52px 16px 12px;
-  
+
 }
+
 /* three-card */
-.rong{
+.rong {
   color: rgba(14, 14, 14, 0.7);
 }
-.mar{
- margin-right: 160px;
+
+.mar {
+  margin-right: 160px;
   margin-left: 160px;
 }
-.three-title{
+
+.three-title {
   font-weight: bold;
   font-size: 40px;
 }
-.three-description{
+
+.three-description {
   font-weight: normal;
   font-size: 16px;
 }
-.pic-style{
-  border-radius: 24px;
+
+.pic-style {
+  /* border-radius: 24px; */
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 48px;
   /* padding-right: 32px; */
 }
-.satelite{
+
+.satelite {
   display: flex;
   gap: 32px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 24px;
+  padding: 48px 48px;
 }
-.likha-title{
+.likha{
+  margin-top: auto;
+}
+.likha-title {
   font-weight: bold;
   font-size: 32px;
   color: rgba(14, 14, 14, 0.8);
-}
-.cnl-logo{
-  margin-top:12px ;
-  margin-bottom:12px ;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  text-shadow: 2px 6px 15px rgba(0, 0, 0, 0.25); 
 }
 
- 
+.cnl-logo {
+  margin-top: 12px;
+  /* margin-bottom: 12px; */
+}
+
+.rn-img {
+  /* border-radius: 24px;  */
+}
+.likha-somoy{
+  display: flex;
+  gap:10px ;
+  font-weight: normal;
+  font-size: 16px;
+  color:rgba(14, 14, 14, 0.7) ;
+  text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);
+  margin-top: 0 auto;
+}
+.likha-description{
+  font-weight: normal;
+  font-size: 16px;
+  color:rgba(14, 14, 14, 0.7);
+  margin-top: 5px;
+  text-shadow:4px 4px 5px  rgba(0, 0, 0, 0.25);
+}
+.click{
+  padding: 13px 26px 13px 26px;
+  border: none;
+  border-radius: 8px;
+  background-color: rgba(0, 106, 80, 1);
+  font-weight: 600px;
+  font-size: 16px;
+  color: white;
+}
